Fix up the top bar styling.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             </div>
             <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">Follow us on</a>
+                    
+                    <li class="tablet-up">
+                        <span class="navbar-text">Follow us on</span>
                     </li>
                     <li>
                         <a href="https://www.twitter.com/right2voteCA" target="_blank"><i class="fa fa-twitter"></i></a>
@@ -39,8 +40,8 @@
                     <li>
                         <a href="https://www.facebook.com/right2votecanada" target="_blank"><i class="fa fa-facebook"></i></a>
                     </li>
-                    <li>
-                        <a href="#">and</a>
+                    <li class="tablet-up">
+                        <span class="navbar-text">and</span>
                     </li>
                     <li>
                         <button>
@@ -83,11 +84,12 @@
                     </div>
 
                     <div class="col-sm-4 sign-up">
-                        <h3 class="white center">Don't worry, we've got your back.  We'll help you sign up.</h3>
+                        <h3 class="white center">Don't worry, we've got your back.  We'll help you get registered to vote in the 2015 Election.</h3>
+                       
                         <input placeholder="Your Email"></input>
                         <br/><br/>
                         <button>
-                            Get the Election Survival Guide
+                            Sign up
                         </button>
                     </div>
                 </div>
@@ -260,7 +262,7 @@
         <!--Organization Section-->
         <div class="row center color4-shadow-background">
             <h2 class="no-bottom">
-                Protect your <img class="bottom-logo" src="img/r2v.png"></img>
+                Protect your <img class="bottom-logo" src="img/right2vote.png"></img>
             </h2>
         </div>
         <!--Organization Section End-->
