--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                     <div class="col-sm-8 vid-col">
                         <div class="fitvid videoWrapper">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/ht_sOeGJJG4" frameborder="0" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/jJRREn57eoI" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
 
@@ -165,6 +165,19 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="row point-quote-area">
+                <div class="col-sm-1"></div>
+                    <div class="col-sm-10">
+                        <h3 class="quote">
+                            “Based on the evidence to date, there is a risk that some individuals who would otherwise rely on the Voter Information Card to enable them to vote will be unable to do so due to s.46(3), which would result in irreparable harm due to their inability to exercise their right to vote in that fashion.”
+                        </h3>
+                        <h4 class="right">
+                            - Justice David Stinson, who declined the injuction against the Fair Elections Act
+                        </h4>
+                    </div>
+                <div class="col-sm-1"></div>
+            </div>
         </div>
         <!--Three Point Section End-->
 
@@ -177,13 +190,13 @@
                         <div class="bullet-info-area">
                             <h2>This is just the tip of the iceberg. </h2>
                             <p>
-                                Did you know that:
+                                Did you know that:</p>
                                 <ul>
                                     <li>The geographical layouts of the ridings have changed.</li>
                                     <li>Elections Canada is limited in its ability to promote voting.</li>
                                     <li>You can no longer vouch for multiple people's identities.</li>
                                 </ul>
-                                The list goes on...
+                                <p>The list goes on...
                             </p>
                         </div>
                     </div>
@@ -195,7 +208,7 @@
                                 Sign Up
                             </button>
 
-                            <h2 class="no-bottom">We won't spam you.<br/> We're here to help.</h2>
+                            <!--<h2 class="no-bottom">We won't spam you.<br/> We're here to help.</h2>-->
                         </div>
                     </div>
                 </div>
