Fix basic formatting/wording on last couple of sections.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                         <button>
                             Sign up
                         </button>
+                        <a href="#" class="cta-alternative">Or, take me directly to the FAQ</a>
                     </div>
                 </div>
 
@@ -235,7 +236,7 @@
         <!--Iceberg Section End-->
 
         <!--Share Section-->
-        <div class="row">
+        <div class="row share-area">
             <div class="container">
 
                 <h2 class="center">
@@ -261,23 +262,23 @@
         <!--Share Section End-->
 
         <!--Get Involved Section-->
-        <div class="row color4-background">
+        <div class="row color4-background donation-area">
             <div class="container">
                 <h3 class="center">
-                    Think you've got something to bring to the table?
+                    Like what we're doing?
                 </h3>
 
                 <button class="block-center">
-                    Get Involved
+                    Donate
                 </button>
 
-                <h3 class="center no-bottom">We're vegan-friendly <strong>;)</strong></h3>
+                <h3 class="center no-bottom">This is a volunteer-run project.</h3>
             </div>
         </div>
         <!--Get Involved Section End-->
 
         <!--Organization Section-->
-        <div class="row center color4-shadow-background">
+        <div class="row center color4-shadow-background footer">
             <h2 class="no-bottom">
                 Protect your <img class="bottom-logo" src="img/right2vote.png"></img>
             </h2>
