--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
                     </div>
 
                     <div class="col-sm-4 sign-up">
-                        <h3 class="white center">Stressed? We've got your back.</h3>
+                        <h3 class="white center cta-headline">Stressed? We've got your back.</h3>
                         
-                        <p><strong>We know you're busy</strong> - we'll send you email reminders to get registered for the election, and to vote come election day. </p>
+                        <p><strong>We know you're busy</strong>, and it's easy to forget tasks like this. Let us send you email reminders to get registered for the election. </p>
                        
-                        <input placeholder="Your Email"></input>
-                        <br/><br/>
-                        <button>
+                        <input placeholder="Your Email" class="cta-email"></input>
+
+                        <button class="cta-button">
                             Sign up
                         </button>
                         <a href="#" class="cta-alternative">Or, take me directly to the FAQ</a>
