Fix CTA alternative links up a bit.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <button class="cta-button">
                             Sign up
                         </button>
-                        <a href="#" class="cta-alternative">Or, take me directly to the FAQ</a>
+                        <a href="#" class="cta-alternative">Or, <strong>take me directly to the FAQ</strong></a>
                     </div>
                 </div>
 
@@ -206,7 +206,7 @@
                                 Sign Up
                             </button>
                             
-                            <p>We won't spam you. We're here to help.</p>
+                            <a href="#" class="cta-alternative">Or, <strong>take me directly to the FAQ</strong></a>
 
                             <!--<h2 class="no-bottom">We won't spam you.<br/> We're here to help.</h2>-->
                         </div>
