Cut out the sharing cruft.

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         “It is essential to understand that the main challenge for our electoral democracy is not voter fraud, but voter participation. I do not believe that if we eliminate vouching and the [information card] as a proof of address, we will have in any way improved the integrity of the voting process. However, we will have taken away the ability of many qualified electors to vote.”
                     </h2>
                     <h4 class="right">
-                        - Marc Mayrand, Chief Electoral Officer of Elections Canada
+                        <a href="http://www.theglobeandmail.com/news/politics/bill-would-disenfranchise-voters-hand-parties-too-much-power-electoral-officer-warns/article17347400/" target="_blank">- Marc Mayrand, Chief Electoral Officer of Elections Canada</a>
                     </h4>
                 </div>
                 <div class="col-sm-1"></div>
@@ -242,12 +242,12 @@
                 <br/>
 
                 <div class="share-container add-margin-bottom">
-                    <span class='st_sharethis_vcount' displayText='ShareThis'></span>
+                    <!--<span class='st_sharethis_vcount' displayText='ShareThis'></span>-->
                     <span class='st_facebook_vcount' displayText='Facebook'></span>
                     <span class='st_twitter_vcount' displayText='Tweet'></span>
-                    <span class='st_pinterest_vcount' displayText='Pinterest'></span>
+                    <!--<span class='st_pinterest_vcount' displayText='Pinterest'></span>
                     <span class='st_reddit_vcount' displayText='Reddit'></span>
-                    <span class='st_email_vcount' displayText='Email'></span>
+                    <span class='st_email_vcount' displayText='Email'></span>-->
                 </div>
 
 
