Update tagline and video.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Right to Vote</title>
+    <title>Right to Vote - Helping Canadians Deal with the Fair Elections Act</title>
 
     <link rel="icon" type="image/png" href="img/pivot_favicon.png">
 
@@ -78,7 +78,7 @@
 
                     <div class="col-sm-8 vid-col">
                         <div class="fitvid videoWrapper">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/jJRREn57eoI" frameborder="0" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/tsGQTel-9gE" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
 
