Fix up a bunch of mobile styling issues.

--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
             <div class="row white iceberg-bottom">
                 <div class="col-sm-1"></div>
                 <div class="col-sm-10">
-                    <h2 class="quote">
+                    <h3 class="quote">
                         “It is essential to understand that the main challenge for our electoral democracy is not voter fraud, but voter participation. I do not believe that if we eliminate vouching and the [information card] as a proof of address, we will have in any way improved the integrity of the voting process. However, we will have taken away the ability of many qualified electors to vote.”
-                    </h2>
+                    </h3>
                     <h4 class="right">
                         <a href="http://www.theglobeandmail.com/news/politics/bill-would-disenfranchise-voters-hand-parties-too-much-power-electoral-officer-warns/article17347400/" target="_blank">- Marc Mayrand, Chief Electoral Officer of Elections Canada</a>
                     </h4>
@@ -237,7 +237,7 @@
                     </div>
                     <div class="col-sm-5"> 
                         <h1>Don't Let the Fair Elections Act Catch Canada Off-Guard.</h1>
-                        <p>This is an important election. We need to <strong>increase voter turnout, not decrease it</strong> with arbitrary rules. Are you committed to your country? Then take action. Help us get the word out.</p>
+                        <h2>This is an important election. We need to <strong>increase voter turnout, not decrease it.</strong></h2>
                     </div>
                 </div>
             </div>
@@ -245,7 +245,7 @@
 
         <div class="row share-area">
             <h1 class="center">Sharing is like voting - <strong>the whole is greater than the sum of its parts</strong>.</h1> 
-                <div class="share-container add-margin-bottom">
+                <div class="share-container">
                 <!--<span class='st_sharethis_vcount' displayText='ShareThis'></span>-->
                 <span class='st_facebook_vcount' displayText='Facebook'></span>
                 <span class='st_twitter_vcount' displayText='Tweet'></span>
@@ -291,7 +291,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    Sponsored by <img class="sponsor" src="img/clouda.png"></img>
+                    <span>Sponsored by</span> <img class="sponsor" src="img/clouda.png"></img>
                 </div>
                 <div class="col-sm-4">
                     <ul class="footer-list center">
@@ -299,7 +299,7 @@
                     </ul>
                 </div>
                 <div class="col-sm-4">
-                    Protect your <img class="bottom-logo" src="img/right2vote.png"></img>
+                    <span>Protect your</span> <img class="bottom-logo" src="img/right2vote.png"></img>
                 </div>
             </div>
         </div>
