Add basic idea for layout of the Guide.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Right to Vote - Helping Canadians Deal with the Fair Elections Act</title>
+    <title>Right to Vote - The Unofficial Landing Page for Voting in the 2015 Canadian Federal Election</title>
 
     <link rel="icon" type="image/png" href="img/pivot_favicon.png">
 
@@ -96,7 +96,7 @@
                         <button class="cta-button">
                             Sign up
                         </button>
-                        <a href="#" class="cta-alternative">Or, <strong>take me directly to the FAQ</strong></a>
+                        <a href="guide.html" class="cta-alternative">Or, <strong>take me directly to the FAQ</strong></a>
                     </div>
                 </div>
 
