Add the 'online' specifier to the Quebec part of the guide.

--- a/guide.html
+++ b/guide.html
@@ -130,7 +130,7 @@
                         <li>You don't have the proper address type. It needs to be one of these three: civic (for example, 123 Main Street), <a href="#">lot and concession</a>, or <a href="#">Section-Township-Range-Meridian.</a></li>
                         <li>You don't have proper identification. This one is tricky, and deserves some attention:
                             <ul>
-                                <li>In every province except for Quebec, your provincial driver's license is an acceptable form of registration identification</li>
+                                <li>In every province except for Quebec, your provincial driver's license is an acceptable form of online registration identification</li>
                                 <li>In Alberta, Newfoundland and Labrador, Saskatchewan and Yukon, your provincial ID will also work</li>
                                 <li><em>The identification must have your <strong>current address</strong></em></li>
                                 <li><em>Therefore, if you live in Quebec (where neither the driver's license nor provincial ID are valid), or don't have the right ID for your province, you'll be ineligible to register online</em></li>
