Add 6pm specifier to October deadline txt.

--- a/guide.html
+++ b/guide.html
@@ -93,7 +93,7 @@
             <div class="row guide-row">
                 <div class="col-sm-1"></div>
                 <div class="col-sm-10">
-                    <p>We strongly encourage everyone to register to vote in advance if they can, as it will be easier to vote on election day if you do so. The deadline for advance registration is <strong>October 13th.</strong> Let's go over the fundamentals so that you understand what's going on.</p>
+                    <p>We strongly encourage everyone to register to vote in advance if they can, as it will be easier to vote on election day if you do so. The deadline for advance registration is <strong>October 13th, 6pm.</strong> Let's go over the fundamentals so that you understand what's going on.</p>
                 </div>
                 <div class="col-sm-1"></div>
             </div>
