Flesh out the facebook share section, the canadian flag section, and the footer.

--- a/guide.html
+++ b/guide.html
@@ -334,16 +334,20 @@
     <div class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-sm-4">
-                    <span>Sponsored by</span> <img class="sponsor" src="img/clouda.png"></img>
+                <div class="col-xs-4">
+                    <a href="http://thinkrad.net" target="_blank"><img class="thinkrad" src="img/thinkrad.png"></img></a>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-4">
                     <ul class="footer-list center">
-                        <li> <a href="#">Privacy Policy</a> </li>
+                        <a href="privacy.html" target="_blank"><img class="footer-logo" src="img/right2vote.png"></img>
+                        <div class="center"> Privacy Policy</div></a>
                     </ul>
                 </div>
-                <div class="col-sm-4">
-                    <span>Protect your</span> <img class="bottom-logo" src="img/right2vote.png"></img>
+                <div class="col-xs-4">
+                    <div class="right-side-footer">
+                         <a href="http://clouda.ca" target="_blank"><img class="sponsor" src="img/clouda.png"></img></a>
+                    </div>
+                   
                 </div>
             </div>
         </div>
