Add a second little headline to the ID splash.

--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
 
                     </div>
                 </div>
+                
+                <h2 class="center point-headline-2">
+                    We've looked into the facts, so you don't have to.
+                </h2>
             </div>
          </div>
         
