--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Right2Vote - Helping Canadians Protect their Right to Vote</title>
 
-    <link rel="icon" type="image/png" href="img/pivot_favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon.png">
 
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
@@ -99,7 +99,7 @@
                 </h2>-->
                 
                 <p class="urgency-statement" id="urgency-statement">
-                    There are <strong id="registration-countdown"></strong> left until the Election.
+                    There are only <strong id="registration-countdown"></strong> left until the Election.
                 </p>
                 
                 <!--
