Add privacy policy pdf.

--- a/index.html
+++ b/index.html
@@ -542,8 +542,8 @@
                 </div>
                 <div class="col-xs-4">
                     <ul class="footer-list center">
-                        <a href="privacy.html" target="_blank"><img class="footer-logo" src="img/right2vote.png"></img>
-                        <div class="center"> Privacy Policy</div></a>
+                        <a href="ThinkRadPrivacyPolicy.pdf" target="_blank"><img class="footer-logo" src="img/right2vote.png"></img>
+                        <div class="center">Privacy Policy</div></a>
                     </ul>
                 </div>
                 <div class="col-xs-4">
