--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Right2Vote - Helping Canadians Protect their Right to Vote</title>
+    <title>Right2Vote - Helping Canadians Overcome the Fair Elections Act</title>
+    
+    <meta name="description" content="The Fair Elections Act has introduced changes that could affect your ability to vote in the 2015 Canadian Election. Follow our guide to get registered and to vote.">
 
     <link rel="icon" type="image/png" href="img/favicon.png">
 
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
-    <link href="css/guide.css" rel="stylesheet">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300|Roboto:300,300italic,500italic,500' rel='stylesheet' type='text/css'>
-
 </head>
 <body>
   <!-- Google Tag Manager -->
