Guide css changes.

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <div class="col-md-8">
                             <h1 class="center">Welcome to our Registration and Voting Guide.</h1>
                             <p>We strongly encourage everyone to register to vote in advance if they can, as it will be easier to vote on election day if you do so. The deadline for advance registration is <strong>October 13th, 6pm Eastern.</strong> Let's go over the fundamentals so that you understand what's going on.</p>
-                            <button id='toggle-register-section'>
+                            <button id='toggle-register-section' class="register-button">
                                 Help me get Registered.
                             </button>
                         </div>
@@ -275,7 +275,7 @@
                         </div>
                         <div class="col-sm-1"></div>
                     </div>
-                        <div class="point-quote-area">
+                        <div class="registration-quote-area">
                         <h3 class="quote">
                             “Based on the evidence to date, there is a risk that some individuals who would otherwise rely on the Voter Information Card to enable them to vote will be unable to do so due to s.46(3), which would result in <strong>irreparable harm due to their inability to exercise their right to vote</strong> in that fashion.”
                         </h3>
