More guide.css.

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
 
-                                                <p>As with registering, there are several distinct options when it comes to actually casting a ballot. Let's examine <strong>when, where</strong> and <strong>how</strong> you can vote using any of the 5 available options. But, before we get into details, let's clarify some details surrounding the identification required to vote.</p>
+                                                <p>As with registering, there are several distinct options when it comes to actually casting a ballot. Let's examine <strong>when, where</strong> and <strong>how</strong> you can vote using any of the 5 available options. Before we get into details, let's clarify some details surrounding the identification required to vote.</p>
 
                                 <button id='toggle-vote-section' class="toggle-vote-section">
                                     Help me Vote!
@@ -340,8 +340,6 @@
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                            <!--<h2 class="center">Clarification: What Identification do I Need to Vote?</h2>
-                            <p>As mentioned at the top of the page, the Fair Elections Act has changed the requirements surrounding voter identification, <strong>enforcing new, more stringent rules about proving your address.</strong> These rules motivated the creation of this guide - they could very easily stop you from voting at all. So, listen up!</p> -->
                             <h2 class="center">Voting ID this year is kind of like Fish &amp; Chips - You can get a 1-piece or a 2-piece</h2>
 
                             <ul>
