--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="row">
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
-                            <h1 class="center">Welcome to our Registration and Voting Guide.</h1>
+                            <h1 class="center guide-headline">Welcome to our Registration and Voting Guide.</h1>
                             <p>We encourage everyone to register to vote in advance if they can, as it will be easier to vote on election day if you do so. The deadline for advance registration is <strong>October 13th, 6pm Eastern.</strong></p>
                             <button id='toggle-register-section' class="register-button">
                                 Help me get Registered.
@@ -156,7 +156,7 @@
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                            <h2 class="center">Clarification: "Checking" vs. "Updating" vs. "Registering"</h2>
+                            <h2 class="guide-headline">Clarification: "Checking" vs. "Updating" vs. "Registering"</h2>
                             <p>These core concepts are poorly explained on the Elections Canada website. Let's examine each in turn:</p> 
 
                             <ul>
@@ -171,7 +171,7 @@
                         <div class="col-sm-1"></div>
                     </div>
 
-                    <h2 class="center">Option 1: Advance Online Registration</h2>
+                    <h2 class="guide-headline">Option 1: Advance Online Registration</h2>
 
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
@@ -224,7 +224,7 @@
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                            <h2 class="center">Option 3: Advance Registration by Mail</h2>
+                            <h2 class="guide-headline">Option 3: Advance Registration by Mail</h2>
                             <p>Call your local Elections Canada office to request a registration form. Mail back the form, with a copy of your proof of identity and address, so the office receives it by Tuesday, October 13 at 6:00 p.m.</p>
                         </div>
                         <div class="col-sm-1"></div>
@@ -233,7 +233,7 @@
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                            <h2 class="center">Option 4: Register In Person on Election Day</h2>
+                            <h2 class="guide-headline">Option 4: Register In Person on Election Day</h2>
 
                             <p>There will be separate line-ups at the polling stations for those who have pre-registered and for those who have yet to register. Bring the same proof of address as is required to vote, as explained in the next section.</p>
                             <a name="mailing-list"></a>
@@ -283,7 +283,7 @@
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                            <h2 class="center">Voting ID this year is kind of like Fish &amp; Chips - You can get a 1-piece or a 2-piece</h2>
+                            <h2 class="guide-headline">Voting ID this year is kind of like Fish &amp; Chips - You can get a 1-piece or a 2-piece</h2>
 
                             <ul>
                                 <li> 
@@ -320,7 +320,7 @@
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                            <h2 class="center">Option 1: Vote at your Riding's Polling Station on Election Day</h2>
+                            <h2 class="guide-headline">Option 1: Vote at your Riding's Polling Station on Election Day</h2>
                             <ul>
                                 <li><strong>When:</strong> Monday, October 19th, 2015</li>
                                 <li><strong>Where:</strong> If you've <a href="#help-me-register">registered to vote</a>, Elections Canada should send you a Voter Information Card in the mail by October 1st. This will tell you where your riding's polling station is located. If you haven't received your card, you should be able to find your polling station online using <a href="http://www.elections.ca/scripts/vis/FindED?L=e&PAGEID=20" target="_blank">this Elections Canada page</a>. It's still early - they haven't posted that information yet. <a href="https://facebook.com/right2votecanada" target="_blank">Follow us on Facebook</a> - we'll post when that goes live. </li>
@@ -332,7 +332,7 @@
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                            <h2 class="center">Option 2: Vote at your Riding's Advance Polling Station in Advance</h2>
+                            <h2 class="guide-headline">Option 2: Vote at your Riding's Advance Polling Station in Advance</h2>
                             <ul>
                                 <li><strong>When:</strong> October 9th, 10th, 11th, 12th a.k.a <strong>Thanksgiving Weekend</strong></li>
                                 <li><strong>Where:</strong> Your advance polling station will also be specified on your Voter Information Card, which should be received by October 1st.</li>     
@@ -344,7 +344,7 @@
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                            <h2 class="center">Option 3: Vote at your Riding's Elections Canada Office in Advance</h2>
+                            <h2 class="guide-headline">Option 3: Vote at your Riding's Elections Canada Office in Advance</h2>
                             <ul>
                                 <li><strong>When:</strong> Before October 13th, 2015</li>
                                 <li><strong>Where:</strong> You can find your local Elections Canada Office using <a href="http://www.elections.ca/scripts/vis/FindED?L=e&PAGEID=20">this Elections Canada Page</a>. Unlike the polling stations, the information for the offices is already available. </li>
@@ -357,7 +357,7 @@
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                            <h2 class="center">Option 4: Vote at a Temporary Elections Canada Office in Advance</h2>
+                            <h2 class="guide-headline">Option 4: Vote at a Temporary Elections Canada Office in Advance</h2>
                             <ul>
                                 <li><strong>When:</strong> October 5th, 6th, 7th, 8th</li>
                                 <li><strong>Where:</strong> Elections Canada is launching a <a href="http://www.elections.ca/content.aspx?section=vot&dir=bkg&document=campu&lang=e">pilot project</a> to open offices at select campuses, Friendship Centres and community centres. You can find the full list <a href="http://www.elections.ca/content2.aspx?section=vote&dir=campus&document=index&lang=e">here.</a>
@@ -373,7 +373,7 @@
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                            <h2 class="center">Option 5: Vote by Mail</h2>
+                            <h2 class="guide-headline">Option 5: Vote by Mail</h2>
                             <ul>
                                 <li><strong>When:</strong> Apply by October 13th, 6pm Eastern (if you apply by mail or online), or 6pm local time (if you apply at your Elections Canada Office). Your completed ballot needs to reach Elections Canada by Election Day (October 19th).</li>
                                 <li><strong>Where:</strong> Applications happen online, by mail, or at an Elections Canada Office.</a>
@@ -405,7 +405,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <div class="share-cta-box">
-                            <h1 class="center">Follow our simple 3-step process:</h1>
+                            <h1 class="center share-headline">Follow our simple 3-step process:</h1>
 
                             <div class="share-instructions">
                                 <ol>
