Experimental facebook CTA.

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                             </div>
 
 
-                            <button onclick="location.href='https://www.facebook.com/right2votecanada'" class="facebook-button">Visit us on <img class="facebook-button-text" src="img/facebook_text.png"></button>
+                            <button onclick="location.href='fb://profile/859872477420296'" class="facebook-button">Visit us on <img class="facebook-button-text" src="img/facebook_text.png"></button>
 
                             <h3 class="center">Sharing is like voting - the whole is greater than the sum of its parts.</h3>
                         </div>
