Send the user to the facebook app if on mobile, else open facebook in a new tab.

--- a/index.html
+++ b/index.html
@@ -415,8 +415,7 @@
                                 </ol>
                             </div>
 
-
-                            <button onclick="location.href='fb://profile/859872477420296'" class="facebook-button">Visit us on <img class="facebook-button-text" src="img/facebook_text.png"></button>
+                            <button id="facebook-cta" class="facebook-button">Visit us on <img class="facebook-button-text" src="img/facebook_text.png"></button>
 
                             <h3 class="center">Sharing is like voting - the whole is greater than the sum of its parts.</h3>
                         </div>
@@ -453,6 +452,7 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="js/detectmobilebrowser-min.js"></script>
         <script src="js/min/cta-min.js"></script>
         <script src="bower_components/bootstrap/js/collapse.js"></script>
         <script src="bower_components/jquery.countdown/dist/jquery.countdown.min.js"></script>
