--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="js/detectmobilebrowser-min.js"></script>
+        <script src="js/detectmobilebrowser.js"></script>
         <script src="js/min/cta-min.js"></script>
         <script src="bower_components/bootstrap/js/collapse.js"></script>
         <script src="bower_components/jquery.countdown/dist/jquery.countdown.min.js"></script>
