Remove the suggestion of links for the address types.

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                 <li>You've changed your name since you last voted.</li>
                                 <li>You live abroad.</li>
                                 <li>You're a member of the Canadian Forces.</li>
-                                <li>You don't have the proper address type. It needs to be one of these three: civic (for example, 123 Main Street), <a href="#">lot and concession</a>, or <a href="#">Section-Township-Range-Meridian.</a></li>
+                                <li>You don't have the proper address type. It needs to be one of these three: civic (for example, 123 Main Street), lot and concession, or Section-Township-Range-Meridian.</li>
                                 <li>You don't have proper identification. This one is tricky, and deserves some attention:
                                     <ul>
                                         <li>In every province except for Quebec, your provincial driver's license is an acceptable form of online registration identification</li>
