--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                            <p>If you're good on all of these fronts, then you should proceed to the registration page. Armed with this guide's knowledge, the steps should be fairly self-explanatory.</p> 
-                            <button onclick="location.href='http://elections.ca/register'">
+                            <p>If you're good on all of these fronts, then you should proceed to the registration page..</p> 
+                            <button id="elections-ca-register">
                                 elections.ca/register
                             </button>
                         </div>
