Remove extra period from elections.ca section.

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                            <p>If you're good on all of these fronts, then you should proceed to the registration page..</p> 
+                            <p>If you're good on all of these fronts, then you should proceed to the registration page.</p> 
                             <button id="elections-ca-register">
                                 elections.ca/register
                             </button>
