--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>Right2Vote - Helping Canadians Overcome the Fair Elections Act</title>
-        <meta name="description" content="The Fair Elections Act has introduced changes that could affect your ability to vote in the 2015 Canadian Election. Follow our guide to get registered and to vote.">
+        <meta name="description" content="The Fair Elections Act has introduced changes that could affect your ability to vote in the 2015 Canadian Election. Follow our guide to register and to vote.">
 
         <link rel="icon" type="image/png" href="img/favicon.png">
 
