Stop related videos from playing when the landing video is over.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <div class="fitvid">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/XhskVrYthco?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/XhskVrYthco?rel=0" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="col-md-2"></div>
